tests/error/equalsInteger-wrong-2nd-argument-unit.uplc
(program 1.0.0[[(builtin equalsInteger)(con integer 10)](con unit ())])